--- a/web/index.html
+++ b/web/index.html
@@ -13,22 +13,23 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="referrer" content="origin-when-cross-origin" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <title>BingAI - 聊天</title>
+  <title>Copilot</title>
   <!-- <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
   <script>
     var vConsole = new window.VConsole();
   </script> -->
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MM5J5X8QQC"></script>
+  <script async src="http://www.aigrantli.com:30/script.js" data-website-id="2310d9a5-ff16-4717-bb46-3f37eb8f30c6"></script>
+  <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-MM5J5X8QQC"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag () { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-MM5J5X8QQC');
-  </script>
+  </script-->
   <!-- 百度统计 -->
-  <script>
+  <!--script>
     var _hmt = _hmt || [];
     (function () {
       var hm = document.createElement("script");
@@ -36,7 +37,7 @@
       var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(hm, s);
     })();
-  </script>
+  </script-->
   <script src="/web/js/bing/chat/global.js"></script>
   <script src="/web/js/bing/chat/amd.js"></script>
   <script src="/web/js/bing/chat/config.js"></script>
