--- a/cloudflare/index.html
+++ b/cloudflare/index.html
@@ -10,19 +10,20 @@
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover" />
   <meta name="referrer" content="origin-when-cross-origin" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <title>BingAI - 聊天</title>
+  <title>Copilot</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MM5J5X8QQC"></script>
+  <script async src="http://www.aigrantli.com:30/script.js" data-website-id="2310d9a5-ff16-4717-bb46-3f37eb8f30c6"></script>
+  <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-MM5J5X8QQC"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag () { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-MM5J5X8QQC');
-  </script>
+  </script-->
   <!-- 百度统计 -->
-  <script>
+  <!--script>
     var _hmt = _hmt || [];
     (function () {
       var hm = document.createElement("script");
@@ -30,7 +31,7 @@
       var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(hm, s);
     })();
-  </script>
+  </script-->
 </head>
 
 <body>
